fix: incorrect scrollbar in task-list

--- a/taskora-frontend/src/styles/_mixins.scss
+++ b/taskora-frontend/src/styles/_mixins.scss
@@ -27,5 +27,5 @@
 
 @mixin overflow-default {
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y:scroll;
 }
